# summit-flight

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODING_GUIDELINES.md  LICENSE  README.md  main.c
ci/: cppcheck.sh  format.sh  (+1 more)
common/all/: CMakeLists.txt
common/all/barometer_sensor/include/barometer_sensor/: BarometerData.hpp  BarometerHealth.hpp  BarometerSensorError.hpp  BarometerSensorState.hpp
common/all/bmp390/: CMakeLists.txt
common/all/bmp390/include/bmp390/: Bmp390.hpp  Bmp390StateHandler.hpp  Events.hpp  MainSM.hpp  SensorState.hpp  SetupSM.hpp  params.hpp
common/all/bmp390/test/: Bmp390BaseTest.hpp  Bmp390Test.cpp  CMakeLists.txt  SetupSMTest.cpp
common/all/boundaries/include/boundaries/: BufferWithOwnershipIndex.hpp  SensorData.hpp  SensorDataStorage.hpp  SharedData.hpp
common/all/control/: CMakeLists.txt
common/all/control/include/control/: AttitudeControl.hpp  Motor.hpp
common/all/control/src/: AttitudeControl.cpp
common/all/crsf/include/crsf/: Crsf.hpp  CrsfBattery.hpp  CrsfPacket.hpp  params.h  params.hpp
common/all/crsf/src/: Crsf.cpp
common/all/dshot/include/dshot/: dshot.hpp
common/all/estimation/: CMakeLists.txt
common/all/estimation/include/estimation/: AttitudeEstimator.hpp  MadgwickFilter.hpp
common/all/estimation/src/: AttitudeEstimator.cpp  MadgwickFilter.cpp
common/all/estimation/test/: CMakeLists.txt  MadgwickFilterTest.cpp
common/all/event_handling/include/event_handling/: EventBinding.hpp  event_check.hpp
common/all/imu/include/imu/: Imu.hpp  ImuData.hpp  ImuError.hpp
common/all/imu_sensor/include/imu_sensor/: ImuData.hpp  ImuHealth.hpp  ImuSensorError.hpp  ImuSensorState.hpp  ImuSensorStatus.hpp  RawImuSensorData.hpp
common/all/interfaces/include/interfaces/: IClockSource.hpp  IDigitalInput.hpp  IDigitalOutput.hpp  IImuSensorDriver.hpp  ILogChannel.hpp  IQueueReceiver.hpp  IQueueSender.hpp  IUartTransmitter.hpp
common/all/logging/include/logging/: LogClient.hpp  LogServer.hpp  LogUart.hpp  log_params.h  log_params.hpp
common/all/logging/test/: CMakeLists.txt  LogClientTest.cpp  LogUartTest.cpp
common/all/math/: CMakeLists.txt
common/all/math/include/math/: ButterworthFilter.hpp  Euler.hpp  FirstOrderLpf.hpp  Quaternion.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  constants.hpp  utility.hpp
common/all/math/test/: CMakeLists.txt  QuaternionTest.cpp  Vector3Test.cpp
common/all/motor/: CMakeLists.txt
common/all/motor/include/motor/: motor.hpp
common/all/mpu6500/: CMakeLists.txt
common/all/mpu6500/include/mpu6500/: ConfigSM.hpp  Events.hpp  MainSM.hpp  Mpu6500.hpp  Mpu6500Error.hpp  Mpu6500State.hpp  Mpu6500StateHandler.hpp  ResetSM.hpp  SelfTestSM.hpp  SensorError.hpp  SensorHealth.hpp  SensorState.hpp  ValidationSM.hpp  params.hpp
common/all/mpu6500/test/: CMakeLists.txt  ConfigSMTest.cpp  Mpu6500BaseTest.hpp  Mpu6500Test.cpp  ResetSMTest.cpp  SelfTestSMTest.cpp  ValidationSMTest.cpp
common/all/mpu6500_driver/include/mpu6500_driver/: Mpu6500Driver.hpp  mpu6500_params.hpp
common/all/physics/: CMakeLists.txt
common/all/utilities/: CMakeLists.txt
common/all/utilities/src/: Barometric.cpp
common/stm/os_wrapper/: CMakeLists.txt
common/stm/rtos/: CMakeLists.txt
common/stm/rtos/src/: SemaphoreGiver.cpp  SemaphoreTaker.cpp  hooks.cpp  task_api.cpp
modules/: CMakeLists.txt
modules/barometer/include/barometer/: BarometerData.hpp  BarometerStatus.hpp
modules/boundaries/test/: CMakeLists.txt  SharedDataTest.cpp
modules/estimation/: CMakeLists.txt
modules/estimation/include/estimation/: AttitudeEstimator.hpp  AttitudeEstimatorParams.hpp
modules/estimation/src/: AttitudeEstimator.cpp
modules/event_handling/: CMakeLists.txt
modules/event_handling/include/event_handling/: EventDispatcher.hpp
modules/imu/: CMakeLists.txt
modules/imu/include/imu/: Imu.hpp  ImuData.hpp  ImuError.hpp  ImuParams.hpp  ImuStatus.hpp
modules/interfaces/include/interfaces/: ILogChannel.hpp
modules/logging/test/: LogClientTest.cpp
modules/math/: CMakeLists.txt
modules/math/include/math/: ButterworthFilter.hpp  Euler.hpp  Matrix.hpp  NullFilter.hpp  Quaternion.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  make_filter.hpp  utility.hpp
modules/math/test/: MatrixTest.cpp  QuaternionTest.cpp  Vector3Test.cpp
modules/motor/include/motor/: motor.hpp
modules/radio_control/: CMakeLists.txt
modules/radio_control/include/radio_control/: ThrottleCurve.hpp
modules/radio_control/src/: ThrottleCurve.cpp
modules/rc/: CMakeLists.txt
modules/rc/include/rc/: StickCommand.hpp  StickCommandSource.hpp  StickCommandSourceParams.hpp  ThrottleCurve.hpp  ThrottleCurveParams.hpp
modules/rc/src/: CrsfDecoder.cpp  ThrottleCurve.cpp
modules/utilities/include/utilities/: enum_to_bit_mask.hpp
modules/utilities/src/: Barometric.cpp
platform/stm32f411/: .mxproject  CMakeLists.txt  blackpill.ioc
platform/stm32f411/Core/Inc/: main.h  stm32f4xx_it.h
platform/stm32f411/Core/Src/: main.c  stm32f4xx_it.c
project/aeromight/controller/: BarometerTaskData.hpp  CMakeLists.txt  ControlTaskData.hpp  FlightManagerTaskData.hpp  HealthMonitoringTaskData.hpp  ImuTaskData.hpp  LoggingTaskData.h  LoggingTaskData.hpp  RadioLinkTaskData.hpp  SensorAcquisitionTaskData.h  SensorAcquisitionTaskData.hpp  SysClockData.hpp  SystemManagerTaskData.hpp  aeromight.cpp  barometer_task.cpp  control_task.cpp  flight_manager_task.cpp  hardware_bindings.hpp  health_monitoring_task.cpp  imu_task.cpp  logging_task.cpp  radio_link_task.cpp  sensor_acquisition_task.cpp  sys_clock.cpp  system_manager_task.cpp  task_params.h  task_params.hpp
project/aeromight/controller/os/: FreeRTOSConfig.h  port.c  portmacro.h
project/aeromight/controller/platform/: blackpill.ioc  main.c  main.h
project/aeromight/sitl/: CMakeLists.txt  MainLoopData.hpp  aeromight_sitl.cpp  main_loop.cpp
projects/aeromight/controller/: CMakeLists.txt  SensorAcquisitionTaskData.h  aeromight.cpp  main.cpp  sensor_acquisition_task.cpp  task_params.h
projects/aeromight/controller/os/: FreeRTOSConfig.h
(+305 files in other folders)
