add_subdirectory(boundaries)
add_subdirectory(barometer)
add_subdirectory(estimation)
add_subdirectory(event_handling)
add_subdirectory(imu)
add_subdirectory(interfaces)
add_subdirectory(logging)
add_subdirectory(math)
add_subdirectory(motor)
add_subdirectory(radio_control)
add_subdirectory(types)
add_subdirectory(utilities)
