add_subdirectory(boundaries)
add_subdirectory(barometer)
add_subdirectory(barometer_sensor)
add_subdirectory(bmp390)
add_subdirectory(crsf)
add_subdirectory(dshot)
add_subdirectory(estimation)
add_subdirectory(event_handling)
add_subdirectory(imu)
add_subdirectory(imu_sensor)
add_subdirectory(interfaces)
add_subdirectory(logging)
add_subdirectory(math)
add_subdirectory(motor)
add_subdirectory(mpu6500)
add_subdirectory(radio_control)
add_subdirectory(types)
add_subdirectory(utilities)